feat: Enhance AdminWebhookManager with FieldValue handling, event delegation, and improved URL validation

--- a/admin-webhooks.html
+++ b/admin-webhooks.html
@@ -76,6 +76,7 @@
 
         .admin-webhook-header p {
             color: var(--gray-600);
+            color: var(--gray-600);
             font-size: 1.125rem;
             margin-bottom: 1.5rem;
         }
