feat: Remove admin navigation button and update related script reference

--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
                     <span class="nav-icon">❓</span>
                     FAQ
                 </button>
-                <button class="fixed-nav-btn admin-nav-btn" id="adminNavBtn" style="display: none;" onclick="window.open('admin-webhooks.html', '_blank')" aria-label="Administration">
-                    <span class="nav-icon">🎛️</span>
-                    Admin
-                </button>
+                <!-- Admin button removed - access admin page directly via URL -->
                 <button class="fixed-nav-btn auth-btn" id="authButton" aria-label="Authentification">
                     <span class="nav-icon">🔐</span>
                     <span id="authButtonText">Connexion</span>
@@ -335,7 +332,7 @@
     <script src="js/components/firebase-auth-manager.js"></script>
     <script src="js/components/auth-security-manager.js"></script>
     <script src="js/components/auth-modal.js"></script>
-    <script src="js/components/admin-navigation-manager.js"></script>
+    <!-- <script src="js/components/admin-navigation-manager.js"></script> Admin button removed -->
     
     <!-- 5. COMPOSANTS AUDIO (DÉPENDANCE CRITIQUE) -->
     <script src="js/components/audio-recorder.js"></script>
