delete extra files

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <script src="js/components/firebase-auth-manager.js"></script>
     <script src="js/components/auth-security-manager.js"></script>
     <script src="js/components/auth-modal.js"></script>
-    <!-- <script src="js/components/admin-navigation-manager.js"></script> Admin button removed -->
+    <script src="js/components/admin-navigation-manager-fixed.js"></script> Admin navigation enabled -->
     
     <!-- 5. COMPOSANTS AUDIO (DÉPENDANCE CRITIQUE) -->
     <script src="js/components/audio-recorder.js"></script>
