UI: hide Mode Test button and prioritize Mode Normal in header navigation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="nav-icon">🏥</span>
                     Mode Normal
                 </button>
-                <button class="fixed-nav-btn" data-tab="mode-test" aria-label="Mode test">
+                <button class="fixed-nav-btn" data-tab="mode-test" aria-label="Mode test" style="display: none;">
                     <span class="nav-icon">🧪</span>
                     Mode Test
                 </button>
