feat: add webhook configuration management and documentation

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
     
     <!-- 1. DEPENDANCES CRITIQUES EN PREMIER -->
     <script src="js/core/config.js"></script>
+    <script src="js/config/webhooks-config.js"></script>
     <script src="js/core/utils.js"></script>
     <script src="js/core/error-handler.js"></script>
     <script src="js/core/performance-optimizer.js"></script>
