statistiques ajoutées & bar navigation amélioré

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <script src="js/components/form-validation.js"></script>
     
     <!-- 7. SYSTÈMES DE DONNÉES ET SAUVEGARDE -->
+    <script src="js/components/user-stats-service.js"></script>
     <script src="js/components/data-sender.js"></script>
     <script src="js/components/auto-save.js"></script>
     <script src="js/components/dmi-data-sender.js"></script>
