--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="nav-icon">🏠</span>
                     Accueil
                 </button>
-                <button class="fixed-nav-btn" id="modeNormalBtn" data-tab="mode-normal" aria-label="Mode normal" style="display: none;">
+                <button class="fixed-nav-btn" id="modeNormalBtn" data-tab="mode-normal" aria-label="Mode normal">
                     <span class="nav-icon">🏥</span>
                     Mode Normal
                 </button>
@@ -31,9 +31,9 @@
                     <span class="nav-icon">🧪</span>
                     Mode Test
                 </button>
-                <button class="fixed-nav-btn" id="modeDmiBtn" data-tab="mode-dmi" aria-label="Mode DMI" style="display: none;">
+                <button class="fixed-nav-btn" id="modeDmiBtn" data-tab="mode-dmi" aria-label="Mode DMI">
                     <span class="nav-icon">📝</span>
-                    mode DMI
+                    Mode DMI
                 </button>
                 <button class="fixed-nav-btn" data-tab="guide" aria-label="Guide d'utilisation">
                     <span class="nav-icon">📖</span>
