--- a/index.html
+++ b/index.html
@@ -10,46 +10,70 @@
     <link rel="stylesheet" href="style-fallback.css">
 </head>
 <body>
-    <!-- Navigation fixez horizontale en header -->
-    <header class="fixed-nav-header" id="fixedNavHeader">
-        <div class="fixed-nav-container">
-            <div class="nav-logo-left">
-                <div class="header-logo">
-                    <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
-                </div>
+    <!-- Bouton hamburger pour mobile -->
+    <button class="sidebar-toggle" id="sidebarToggle" aria-label="Ouvrir le menu">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+    </button>
+
+    <!-- Overlay pour mobile -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
+    <!-- Navigation verticale sidebar -->
+    <aside class="sidebar" id="sidebar" aria-label="Navigation principale">
+        <div class="sidebar-header">
+            <div class="header-logo">
+                <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
             </div>
-            <nav class="nav-tabs-right" aria-label="Navigation principale">
-                <button class="fixed-nav-btn active" data-tab="home" aria-label="Page d'accueil">
-                    <span class="nav-icon">🏠</span>
-                    Accueil
-                </button>
-                <button class="fixed-nav-btn" id="modeNormalBtn" data-tab="mode-normal" aria-label="Mode normal">
-                    <span class="nav-icon">🏥</span>
-                    Mode Normal
-                </button>
-                <button class="fixed-nav-btn" id="modeTestBtn" data-tab="mode-test" aria-label="Mode test">
-                    <span class="nav-icon">🧪</span>
-                    Mode Test
-                </button>
-                <button class="fixed-nav-btn" id="modeDmiBtn" data-tab="mode-dmi" aria-label="Mode DMI">
-                    <span class="nav-icon">📝</span>
-                    Mode DMI
-                </button>
-                <button class="fixed-nav-btn" data-tab="guide" aria-label="Guide d'utilisation">
-                    <span class="nav-icon">📖</span>
-                    Guide
-                </button>
-                <button class="fixed-nav-btn" data-tab="faq" aria-label="Questions fréquentes">
-                    <span class="nav-icon">❓</span>
-                    FAQ
-                </button>
-                <button class="fixed-nav-btn" data-tab="connexion" aria-label="Connexion / Profil">
-                    <span class="nav-icon">🔐</span>
-                    <span id="authButtonText">Connexion</span>
-                </button>
-            </nav>
+            <button class="sidebar-close" id="sidebarClose" aria-label="Fermer le menu">×</button>
         </div>
-    </header>
+
+        <nav class="sidebar-nav">
+            <div class="nav-section">
+                <span class="nav-section-title">Navigation</span>
+                <button class="sidebar-nav-btn active" data-tab="home" aria-label="Page d'accueil">
+                    <span class="nav-icon">🏠</span>
+                    <span class="nav-text">Accueil</span>
+                </button>
+            </div>
+
+            <div class="nav-section">
+                <span class="nav-section-title">Modes</span>
+                <button class="sidebar-nav-btn" id="modeNormalBtn" data-tab="mode-normal" aria-label="Mode normal">
+                    <span class="nav-icon">🏥</span>
+                    <span class="nav-text">Mode Normal</span>
+                </button>
+                <button class="sidebar-nav-btn" id="modeTestBtn" data-tab="mode-test" aria-label="Mode test">
+                    <span class="nav-icon">🧪</span>
+                    <span class="nav-text">Mode Test</span>
+                </button>
+                <button class="sidebar-nav-btn" id="modeDmiBtn" data-tab="mode-dmi" aria-label="Mode DMI">
+                    <span class="nav-icon">📝</span>
+                    <span class="nav-text">Mode DMI</span>
+                </button>
+            </div>
+
+            <div class="nav-section">
+                <span class="nav-section-title">Aide</span>
+                <button class="sidebar-nav-btn" data-tab="guide" aria-label="Guide d'utilisation">
+                    <span class="nav-icon">📖</span>
+                    <span class="nav-text">Guide</span>
+                </button>
+                <button class="sidebar-nav-btn" data-tab="faq" aria-label="Questions fréquentes">
+                    <span class="nav-icon">❓</span>
+                    <span class="nav-text">FAQ</span>
+                </button>
+            </div>
+        </nav>
+
+        <div class="sidebar-footer">
+            <button class="sidebar-nav-btn sidebar-auth-btn" data-tab="connexion" aria-label="Connexion / Profil">
+                <span class="nav-icon">🔐</span>
+                <span class="nav-text" id="authButtonText">Connexion</span>
+            </button>
+        </div>
+    </aside>
 
     <main class="container">
         <!-- Page d'accueil -->
